clusters/izzy-cluster/uwu.co.nz/deployment.yaml
apiVersion: v1
kind: Deployment
metadata:
  name: uwu-co-nz
  namespace: uwu-co-nz
spec:
  replica: 2
  selector:
    matchLabels:
      app.kubernetes.io/name: uwu-co-nz
  template:
    metadata:
      labels:
        app.kubernetes.io/name: uwu-co-nz
    spec:
      securityContext:
        runAsUser: 1000
        runAsGroup: 3000
        runAsNonRoot: true
        fsGroup: 2000
        seccompProfile:
          type: RuntimeDefault
      containers:
        - name: web
          image: ghcr.io/ttrssreal/uwu-co-nz:2 # TODO: Auto update
          securityContext:
            capabilities:
              drop:
                - ALL
            readOnlyRootFilesystem: true
            allowPrivilegeEscalation: false
          ports:
            - name: http
              containerPort: 3000
