clusters/izzy-cluster/uwu.co.nz/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: uwu-co-nz
  namespace: uwu-co-nz
  annotations:
    cert-manager.io/cluster-issuer: http-issuer
spec:
  ingressClassName: nginx
  tls:
  - hosts:
      - 2.uwu.co.nz
    secretName: 2-uwu-tls
  rules:
  - host: 2.uwu.co.nz
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: uwu-co-nz
            port:
              name: http
